--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -120,11 +120,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 
 .image-item {
-  width: 24.7%;
+  width: 24.8%;
   height: 200rpx;
   margin-top: 1px;
 }
