--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -5,10 +5,12 @@
   </view>
 </view>
 <view class='article-container'>
-  <block wx:for='{{articleList}}' wx:key='id'>
+  <block wx:for='{{searchList}}' wx:key='id'>
     <view bindtap='toArticle'>
       <text class='article-tilte'>{{item.title}}</text>
       <text class='article-content'>{{item.content}}</text>
     </view>
   </block>
 </view>
+<view class="loading" hidden="{{!searchLoading}}">正在载入更多...</view>
+<view class="loading complete" hidden="{{!searchLoadingComplete}}">已加载全部</view>
