--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -8,7 +8,7 @@
     </view>
   </view>
   <view class='button-container'>
-    <text class='reward'>打赏记录</text>
+    <text class='reward' bindtap='toRecord'>打赏记录</text>
     <text class='question' bindtap='toQuestion'>常见问题</text>
     <text class='about' bindtap='toAbout'>关于雾</text>
     <text class='notice'>通知</text>
