--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -3,13 +3,14 @@
     <view class='title'>{{title}} </view>
     <view class='author-container'>
       <text class='author'>{{author}}</text>
-      <text class='time'>{{time}}</text>
+      <text class='time'>{{createTime}}</text>
     </view>
     <view class='content'>{{content}} </view>
   </view>
   <view class='comment-container'>
-    <input class='comment-input' value='输入评论' />
-    <view>评论</view>
+    <input class='comment-input' bindinput='' value='输入评论' />
+    <view bindtap='commentUpload'>评论</view>
   </view>
-
+  <view class="loading" hidden="{{!searchLoading}}">正在载入更多...</view>
+  <view class="loading complete" hidden="{{!searchLoadingComplete}}">已加载全部</view>
 </view>
